test/semantic_errors/idl/example.bar.taihe
struct Bar {
    a: i32;
    b: i32;
}

function func(a: i32): i32;
